--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 </head>
 <body>
 
-    <!-- HEADER WITH NAV -->
+ 
+
+    <div class="content">
+        <!-- HEADER WITH NAV -->
     <header class="fixed-top">
         <div class="container-fluid">
             <div class="row justify-content-between">
@@ -68,7 +71,7 @@
                     <span>Home</span>
                 </div>
                 <div class="bar-icon-bg">
-                    <i class="fa-solid fa-signal"></i>
+                    <i class="fa-solid fa-chart-simple"></i>
                     <span>Stats</span>
                 </div>
                 <div class="bar-icon-bg">
@@ -82,7 +85,7 @@
                     <i class="fa-solid fa-house"></i>
                 </div>
                 <div class="bar-icon-sm">
-                    <i class="fa-solid fa-signal"></i>
+                    <i class="fa-solid fa-chart-simple"></i>
                 </div>
                 <div class="bar-icon-sm">
                     <i class="fa-solid fa-signal"></i>
@@ -107,25 +110,170 @@
     <!-- /* END LEFT BAR */ -->
 
 
+    <!-- /* START MAIN */ -->
+
+    <!-- BLUE BAR WITH OFFCANVA -->
 
 
+    <main>
+        <div class="boolean">
+            <div class="container-fluid">
+                <div class="row justify-content-between">
+                    <div class="col-12 col-lg-7 py-2">
+                        <h2>Boolean <span class="badge d-inline">Piano Blaze</span></h2>
+                        <div>
+                            <span class="badge d-inline">3 app</span>
+                            <i class="fa-solid fa-angles-right"></i>
+                            <span class="badge d-none d-lg-inline">Boolean mobile app</span>
+                            <span class="badge d-none d-lg-inline">Boolean web app</span>
+                            <span class="badge d-none d-lg-inline my-2">Boolean blog app</span>
+                            <span class="badge d-inline d-lg-none">
+                                <i class="fa-solid fa-plus"></i>
+                            </span>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-lg-2 py-2">
+                        <span style="font-weight: bold; font-size: 13px;">Studenti online negli ultimi 30 minuti</span>
+                        <h3 class="py-1">125</h3>
+                    </div>
+
+                    <div class="col-12 col-lg-2 py-2 first">
+                        <span class="pe-1" style="font-weight: bold; font-size: 13px;">Nuovo studente</span>
+                        <button class="btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i class="fa-solid fa-plus"></i></button>
+
+                        <div class="offcanvas offcanvas-end w-50" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
+                        <div class="offcanvas-header">
+                            <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Inserisci un nuovo studente</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-6">
+                                        <div class="mb-3">
+                                            <label for="formGroupExampleInput" class="form-label">Nome</label>
+                                            <input type="text" class="form-control" id="formGroupExampleInput">
+                                          </div>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="mb-3">
+                                            <label for="formGroupExampleInput" class="form-label">Cognome</label>
+                                            <input type="text" class="form-control" id="formGroupExampleInput">
+                                          </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-6">
+                                        <div class="py-1">
+                                            Email
+                                        </div>
+                                        <div class="input-group mb-3">
+                                            <span class="input-group-text" id="basic-addon1">@</span>
+                                            <input type="text" class="form-control"  aria-label="Username" aria-describedby="basic-addon1">
+                                          </div>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="mb-3">
+                                            <label for="formGroupExampleInput" class="form-label">Password</label>
+                                            <input type="password" class="form-control" id="formGroupExampleInput">
+                                          </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <div class="py-2">
+                                                Indirizzo
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <div class="input-group mb-3">
+                                                <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                                              </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-6">
+                                            <div>
+                                                <div class="py-2">
+                                                    Città
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div>
+                                                <div class="py-2">
+                                                    Stato
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-2">
+                                            <div>
+                                                <div class="py-2">
+                                                    CAP
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-6">
+                                            <div class="mb-3">
+                                                <input type="text" class="form-control" id="formGroupExampleInput">
+                                              </div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="input-group mb-3">
+                                                <label class="input-group-text" for="inputGroupSelect01">Options</label>
+                                                <select class="form-select" id="inputGroupSelect01">
+                                                  <option selected>Scegli...</option>
+                                                  <option value="1">Italia</option>
+                                                  <option value="2">Stati</option>
+                                                  <option value="3">Three</option>
+                                                </select>
+                                              </div>
+                                        </div>
+                                        <div class="col-2">
+                                            <div class="input-group mb-3">
+                                                <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                                              </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <div class="py-2">Foto</div>
+                                            <div class="input-group mb-3">
+                                                <input type="file" class="form-control" id="inputGroupFile01">
+                                              </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <input type="checkbox" name="" id=""> Seleziona per proseguire
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-12 py-2">
+                                            <button type="button" class="btn btn-primary">Salva</button>
+                                            <button type="button" class="btn btn-warning">Svuota</button>
+                                        </div>
+                                    </div>    
+                                </div>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    <!-- END BLUE BAR WITH OFFCANVA -->
 
 
+    </main>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+    </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
 </body>
 </html>
